<LinearLayout
    android:padding="40dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.quiz.fragments.FragmentHomeScreen">

    <!-- TODO: Update blank fragment layout -->
    <com.project.quiz.customviews.TextViewRegularFont
        android:textSize="22sp"
        android:textColor="@color/colorTextDark"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/message1" />
    <com.project.quiz.customviews.TextViewRegularFont
        android:textSize="22sp"
        android:textColor="@color/colorTextDark"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/message2" />
    <com.project.quiz.customviews.TextViewRegularFont
        android:textSize="22sp"
        android:textColor="@color/colorTextDark"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/message3" />

</LinearLayout>
