<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.project.quiz.activities.ActivityAddStudentRecords">
    <TextView
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@color/colorTextDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/studentDetails"/>
    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/colorPrimaryLight"
        android:id="@+id/nameEditLayout"
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="@color/colorPrimaryLight"
            android:textColorHint="@color/colorPrimaryLight"
            android:hint="@string/enterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:textColorHint="@color/colorPrimaryLight"
        android:id="@+id/yearEditLayout"
        android:layout_margin="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:textColor="@color/colorPrimaryLight"
            android:textColorHint="@color/colorPrimaryLight"
            android:hint="@string/enterYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
    <TextView
        android:elevation="5dp"
        android:id="@+id/button_next"
        android:background="@color/colorPrimaryLight"
        android:textSize="22sp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_margin="25dp"
        android:text="@string/addStudent"
        android:layout_width="match_parent"
        android:layout_height="48dp" />

</LinearLayout>
